Refactor RoiManagerUtil